--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
+    "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.7.0",
+    "better-sqlite3": "^12.4.1",
     "cfonts": "^3.3.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
