--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "better-sqlite3": "^12.4.1",
     "cfonts": "^3.3.0",
     "chalk": "^5.3.0",
+    "clipboardy": "^5.0.1",
     "commander": "^12.0.0",
     "dotenv": "^16.4.0",
     "enquirer": "^2.4.1",
