--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/image-size": "^0.7.0",
     "axios": "^1.7.0",
     "better-sqlite3": "^12.4.1",
     "cfonts": "^3.3.0",
@@ -45,6 +46,7 @@
     "dotenv": "^16.4.0",
     "enquirer": "^2.4.1",
     "fs-extra": "^11.2.0",
+    "image-size": "^2.0.2",
     "ink": "^4.4.1",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
