feat: Rename to Grokinou CLI with dual command support
Changed package name and command from grok to grokinou-cli (Enhanced Fork).

✅ Package Changes (package.json):
   - Name: @vibe-kit/grok-cli → @vibe-kit/grokinou-cli
   - Version: 0.0.33 → 0.1.0 (major feature release)
   - Description: Enhanced fork with multi-provider support
   - Commands: Added 'grokinou-cli' as primary, kept 'grok' as alias
   - Keywords: Added grokinou, multi-provider, openai, claude, mistral, deepseek
   - Author: Zack, Claude, ChatGPT, Grok
   - License: BSD-3-Clause AND GPL-3.0 (dual license)
   - Repository: https://github.com/Kenchan1111/Grokinou
   - Homepage: https://github.com/Kenchan1111/Grokinou
   - Bugs: https://github.com/Kenchan1111/Grokinou/issues

✅ README Overhaul (485 lines):
   - Complete rewrite as Enhanced Fork documentation
   - Added comparison table: Grokinou vs grok-cli
   - Comprehensive feature list with all enhancements
   - Multi-provider setup instructions
   - Session management documentation
   - All 15+ commands documented
   - Smart paste, image detection, search features
   - Testing section with links to test docs
   - Development, build, lint instructions
   - Project structure overview
   - Migration guide from grok-cli
   - Contributing, bug reporting sections
   - Dual license explanation
   - Authors & contributors section
   - Terminology section (Enhanced Fork, Feature Fork, Distribution)
   - Comparison to Ubuntu/Debian, Neovim/Vim paradigm

✅ Enhanced Fork Definition:
   In Linux/Dev terminology, Grokinou is:
   - Enhanced Fork: Fork with substantial improvements
   - Feature Fork: Fork focused on adding major features
   - Distribution: Like Ubuntu to Debian, Neovim to Vim

✅ Command Support:
   Primary: grokinou-cli
   Legacy: grok (alias for backward compatibility)

✅ Installation Verification:
   which grokinou-cli → /home/zack/.nvm/.../grokinou-cli ✅
   which grok → /home/zack/.nvm/.../grok ✅
   grokinou-cli --version → 0.1.0 ✅

✅ Benefits:

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@vibe-kit/grok-cli",
-  "version": "0.0.33",
-  "description": "An open-source AI agent that brings the power of Grok directly into your terminal.",
+  "name": "@vibe-kit/grokinou-cli",
+  "version": "0.1.0",
+  "description": "Grokinou - Enhanced fork of grok-cli with multi-provider AI support (Grok, Claude, OpenAI, Mistral, DeepSeek), advanced session management, and modern features",
   "type": "module",
   "main": "dist/index.js",
   "exports": {
@@ -11,6 +11,7 @@
     }
   },
   "bin": {
+    "grokinou-cli": "dist/index.js",
     "grok": "dist/index.js"
   },
   "scripts": {
@@ -29,10 +30,25 @@
     "agent",
     "text-editor",
     "grok",
-    "ai"
+    "grokinou",
+    "ai",
+    "multi-provider",
+    "openai",
+    "claude",
+    "mistral",
+    "deepseek",
+    "session-management"
   ],
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "Zack, Claude, ChatGPT, Grok",
+  "license": "BSD-3-Clause AND GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Kenchan1111/Grokinou.git"
+  },
+  "homepage": "https://github.com/Kenchan1111/Grokinou",
+  "bugs": {
+    "url": "https://github.com/Kenchan1111/Grokinou/issues"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
     "@types/better-sqlite3": "^7.6.13",
