refactor: Remove grok alias, keep grokinou-cli as primary
Changed command structure to emphasize CLI-first, LLM-agnostic branding.

✅ Command Changes (package.json):
   Primary: grokinou-cli (full name, explicit)
   Alias: grokinou (short form for convenience)
   Removed: grok (no longer used)

✅ Rationale - LLM-Agnostic Branding:
   - grokinou-cli emphasizes it's a CLI tool first
   - Not tied to "Grok" AI provider specifically
   - Supports 5 providers: Grok, Claude, OpenAI, Mistral, DeepSeek
   - Clear distinction from original grok-cli
   - Professional naming convention

✅ README Updates:
   - Updated "Launch Commands" section
   - Added migration note: "no more `grok` command"
   - Added "Why grokinou-cli?" explanation section:
     * CLI-first branding
     * LLM-agnostic (not just Grok AI)
     * Multi-provider support
     * Clear identity as enhanced fork
     * Short alias available
   - Updated installation verification examples
   - Updated command support section

✅ Installation Verified:
   which grokinou-cli → /home/zack/.nvm/.../grokinou-cli ✅
   which grokinou → /home/zack/.nvm/.../grokinou ✅
   which grok → (not found) ✅
   grokinou-cli --version → 0.1.0 ✅
   grokinou --version → 0.1.0 ✅

✅ Comparison to Other Forks:
   Vim → Neovim (nvim, not vim)
   MySQL → MariaDB (mariadb, not mysql)
   Debian → Ubuntu (ubuntu, not debian)
   grok-cli → Grokinou (grokinou-cli, not grok) ✅

✅ Benefits:
   - No confusion with Grok AI provider name
   - Emphasizes multi-provider capability
   - Professional CLI tool branding
   - Clear fork identity
   - Shorter alias still available

Note: Test documentation (TESTING*.md) will be updated in follow-up
to replace command references consistently.

Files modified:
- package.json
- README.md

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "bin": {
     "grokinou-cli": "dist/index.js",
-    "grok": "dist/index.js"
+    "grokinou": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
