fix: add chmod +x to build scripts to fix permission issues
PROBLEM: After 'npm run build', dist/index.js loses execute permission
Result: 'grokinou-cli' command fails with permission denied

SOLUTION:
- Modified 'build' script: tsc && chmod +x dist/index.js
- Modified 'build:bun' script: same fix for bun users
- Added 'rebuild' script: npm run build && npm link
  → One-command solution to rebuild and reinstall globally

Usage:
  npm run build    → Compile + add execute permission
  npm run rebuild  → Build + reinstall globally

This ensures dist/index.js always has executable permission after build.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "grokinou": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
-    "build:bun": "bun run tsc",
+    "build": "tsc && chmod +x dist/index.js",
+    "rebuild": "npm run build && npm link",
+    "build:bun": "bun run tsc && chmod +x dist/index.js",
     "dev": "bun run src/index.ts",
     "dev:node": "tsx src/index.ts",
     "start": "node dist/index.js",
