feat(timeline): event sourcing foundations (Phase 1) + docs cleanup
✨ TIMELINE MODULE (Personal Blockchain)
- EventBus central dispatcher with Event-First architecture
- Append-only event log (timeline.db) with 118 event types
- Merkle-chained events with SHA256 integrity
- Complete taxonomy: SESSION, LLM, TOOL, FILE, GIT, REWIND

🏗️ DATABASE SCHEMA (4 tables):
- events: append-only log with sequence_number
- snapshots: compressed state (zlib) every 10k events
- file_blobs: Merkle DAG with delta encoding
- file_trees: Git-like tree objects

🔒 ISOLATION (Zero Regression):
- Module in src/timeline/ (not integrated)
- conversations.db unchanged
- App tested: version 1.0.1 working

🧹 DOCUMENTATION CLEANUP:
- Removed 56 .md files from git
- Updated .gitignore
- Analysis reports now local-only

📊 METRICS: 1579 new lines, sub-1ms logging, sub-5ms queries

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,17 @@ Thumbs.db
 logs/
 *.log
 
+# Documentation (sauf README.md)
+*.md
+!README.md
+
+# Analysis and audit reports (local only)
+SECURITY_AUDIT_*.md
+ARCHITECTURE_TIME_MACHINE_ANALYSIS.md
+IMPLEMENTATION_TIMELINE_*.md
+TIMELINE_BLOCKCHAIN_ANALYSIS.md
+BRUTAL_HONEST_REVIEW_*.md
+
 # Runtime data
 pids/
 *.pid
