--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,10 @@ Thumbs.db
 logs/
 *.log
 
-# Documentation (sauf README.md)
+# Documentation (sauf README.md et REWIND_FEATURES.md)
 *.md
 !README.md
+!REWIND_FEATURES.md
 
 # Analysis and audit reports (local only)
 SECURITY_AUDIT_*.md
