feat(new-session): add directory initialization options (clone-git, copy-files, from-rewind)
Phase: /new-session enhancements - Directory initialization capabilities

Nouvelles Features:
1. --clone-git: Clone Git repository vers nouveau répertoire
   - Clone complet du repo actuel (incluant .git)
   - Utilise git clone + copie vers répertoire cible
   - Use case: Git branching, développement parallèle

2. --copy-files: Copie fichiers sans Git
   - Copie tous les fichiers (exclut .git, node_modules, fichiers cachés)
   - Utilise rsync (fallback: cp)
   - Use case: Documents, projets non-Git

3. --from-rewind <timestamp>: Initialisation depuis Event Sourcing
   - Appelle /rewind pour reconstruire l'état exact à timestamp
   - Reconstruit fichiers + Git repository (mode full)
   - Pont entre /new-session et /rewind
   - Use case: Recovery, Time Machine, branching temporel

Priority Logic:
- from-rewind > clone-git > copy-files > empty
- Options mutuellement exclusives
- Exécution avant création de session

Files Modified:
- src/hooks/use-input-handler.ts:
  - Ajout parsing --clone-git, --copy-files, --from-rewind
  - Implémentation logique d'initialisation (git clone, rsync, executeRewindTo)
  - Message de confirmation avec init mode
  - Documentation /help mise à jour

- .gitignore: allow NEW_SESSION_FEATURES.md

Documentation:
- NEW_SESSION_FEATURES.md: guide complet avec use cases, workflows, FAQ

Architecture:
- Clone Git: git clone + cp (1-2s)
- Copy Files: rsync/cp (0.5-1s)
- From Rewind: Event Sourcing replay (3-10s, précis)

Workflows:
- Git branching: --clone-git
- Document editing: --copy-files
- Time Machine recovery: --from-rewind

Build: ✅ Passed
Tests: ⏳ Pending

--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,11 @@ Thumbs.db
 logs/
 *.log
 
-# Documentation (sauf README.md et REWIND_FEATURES.md)
+# Documentation (sauf README.md, REWIND_FEATURES.md, NEW_SESSION_FEATURES.md)
 *.md
 !README.md
 !REWIND_FEATURES.md
+!NEW_SESSION_FEATURES.md
 
 # Analysis and audit reports (local only)
 SECURITY_AUDIT_*.md
