feat(llm-tools): complete documentation of all session_new and rewind_to options
FEATURES ADDED:
• session_new: Added init_mode parameter with 4 modes
  - empty: Empty directory (default)
  - clone-git: Clone current Git repository (HEAD)
  - copy-files: Copy files (exclude .git, node_modules)
  - from-rewind: Event sourcing initialization from timestamp
• session_new: Added rewind_timestamp and rewind_git_mode params
• Enriched tool descriptions with proactive clarification
• LLM now asks user to choose between session_new vs rewind_to

DOCUMENTATION:
• LLM_TOOL_CLARIFICATION_GUIDE.md: Proactive clarification pattern
• LLM_TOOLS_OPTIONS_REFERENCE.md: Complete reference (19 options)
  - session_new: 10 parameters fully documented
  - rewind_to: 9 parameters fully documented
  - Comparison table, decision tree, examples

IMPLEMENTATION:
• src/tools/session-tools.ts: executeSessionNew() updated
  - Handles all 4 init_mode cases
  - Validates Git repo for clone-git
  - Uses rsync/cp for copy-files
  - Calls executeRewindTo for from-rewind
• src/grok/tools.ts: Enhanced descriptions
  - Visual tables with capabilities/limitations
  - Mandatory user confirmation templates
  - Cross-references between tools

TOTAL CHANGES:
• 5 files modified
• 2 new documentation files
• 371+ lines of code added
• All options documented and implemented

--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,13 @@ Thumbs.db
 logs/
 *.log
 
-# Documentation (sauf README.md, REWIND_FEATURES.md, NEW_SESSION_FEATURES.md)
+# Documentation (sauf README.md, REWIND_FEATURES.md, NEW_SESSION_FEATURES.md, LLM guides)
 *.md
 !README.md
 !REWIND_FEATURES.md
 !NEW_SESSION_FEATURES.md
+!LLM_TOOL_CLARIFICATION_GUIDE.md
+!LLM_TOOLS_OPTIONS_REFERENCE.md
 
 # Analysis and audit reports (local only)
 SECURITY_AUDIT_*.md
