feat: add Execution Viewer with real-time COT and stderr debugging
Complete Execution Viewer implementation with real-time LLM tracking.

Backend: ExecutionManager, ExecutionStream, COT tracking (thinking/action/observation/decision)
UI: LayoutManager (3 modes), ExecutionViewer, keyboard shortcuts, horizontal split
Stderr: Separate capture in BashTool, red display, exit codes, no more 2>&1
Settings: 12 options, persistent storage, copy/save functionality
Types: Enhanced ToolResult with stderr and exitCode fields

Files: 17 changed (+2,209/-36 lines), 6 new, 11 modified, 3 orphans removed
New modules: src/execution/index.ts, execution-manager.ts, execution-utils.ts, layout-manager.tsx, execution-viewer.tsx
Modified types: src/types/index.ts (ToolResult interface)
Status: Production-ready, TypeScript passing, zero regressions

Merkle: 4bc4998507c6a43d259667a35dba3b96b3124f8a78b0ec25f6c1abcd02471f25

Integrity-Merkle-Root: 4bc4998507c6a43d259667a35dba3b96b3124f8a78b0ec25f6c1abcd02471f25
Integrity-Total-Files: 177
Integrity-Timestamp: 2025-11-30T07:46:27.940667+00:00

--- a/.gitignore
+++ b/.gitignore
@@ -42,13 +42,15 @@ Thumbs.db
 logs/
 *.log
 
-# Documentation (sauf README.md, REWIND_FEATURES.md, NEW_SESSION_FEATURES.md, LLM guides)
+# Documentation (sauf README.md et guides essentiels)
 *.md
 !README.md
 !REWIND_FEATURES.md
 !NEW_SESSION_FEATURES.md
 !LLM_TOOL_CLARIFICATION_GUIDE.md
 !LLM_TOOLS_OPTIONS_REFERENCE.md
+!test/README_COMPREHENSIVE_TESTS.md
+!MANUAL_TESTING_GUIDE.md
 
 # Analysis and audit reports (local only)
 SECURITY_AUDIT_*.md
@@ -56,6 +58,14 @@ ARCHITECTURE_TIME_MACHINE_ANALYSIS.md
 IMPLEMENTATION_TIMELINE_*.md
 TIMELINE_BLOCKCHAIN_ANALYSIS.md
 BRUTAL_HONEST_REVIEW_*.md
+CONCEPTS_*.md
+EXECUTION_VIEWER_*.md
+STDERR_*.md
+LAYOUT_*.md
+FINAL_*.md
+INTEGRITY_*.md
+SYNC_*.md
+MODULE_*.md
 
 # Runtime data
 pids/
