--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ink": "^4.4.1",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
+    "nanoid": "^5.1.6",
     "openai": "^5.10.1",
     "react": "^18.3.1",
     "ripgrep-node": "^1.0.0",
