docs: add comprehensive help and testing documentation
Created complete documentation suite for Grokinou CLI v2.0.0

Documentation Created:
1. HELP.md (~600 lines)
   - Complete user & developer reference
   - 22 user commands documented
   - 17 LLM tools documented
   - 50+ code examples
   - Keyboard shortcuts guide
   - Execution Viewer guide
   - Timeline & Time Machine docs
   - Troubleshooting section

2. TESTING_COMMANDS_GUIDE.md (~800 lines)
   - Practical testing guide with real examples
   - 87 detailed test cases
   - 100+ concrete examples
   - Expected outputs for every test
   - Edge cases included

3. TESTING_CHECKLIST.md (~600 lines)
   - Systematic validation checklist
   - 87 checkbox tests
   - Progress tracking
   - Issues documentation template
   - Sign-off section (Developer/QA/PO)

4. DOCUMENTATION_SUMMARY.md
   - Overview of all documentation
   - Statistics and metrics
   - Usage guide for each audience (users/devs/QA)
   - Quick reference

Coverage:
- User Commands: 22/22 (100%)
- LLM Tools: 17/17 (100%)
- Test Cases: 87 comprehensive tests
- Examples: 150+ code examples
- Categories: 7 (General, Search, Sessions, Timeline, Models, Git, Edge Cases)

.gitignore Updated:
- Added exceptions for documentation files
- HELP.md, TESTING_*.md, DOCUMENTATION_*.md now tracked

Status: Ready for systematic testing and QA validation

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,10 @@ logs/
 !LLM_TOOLS_OPTIONS_REFERENCE.md
 !test/README_COMPREHENSIVE_TESTS.md
 !MANUAL_TESTING_GUIDE.md
+!HELP.md
+!TESTING_COMMANDS_GUIDE.md
+!TESTING_CHECKLIST.md
+!DOCUMENTATION_SUMMARY.md
 
 # Analysis and audit reports (local only)
 SECURITY_AUDIT_*.md
