--- a/package.json
+++ b/package.json
@@ -29,7 +29,23 @@
     "test:run": "node test/user-commands.test.js && node test/llm-tools.test.js",
     "test:user-commands": "npm run build && npx tsc test/user-commands.test.ts --outDir test --module esnext --skipLibCheck && node test/user-commands.test.js",
     "test:llm-tools": "npm run build && npx tsc test/llm-tools.test.ts --outDir test --module esnext --skipLibCheck && node test/llm-tools.test.js",
-    "test:all": "npm test"
+    "test:all": "npm test",
+    "watch:integrity": "npm run build && tsx src/security/watcher-cli.ts",
+    "watch:integrity:llm": "npm run build && tsx src/security/watcher-cli.ts -- --mode llm",
+    "watch:integrity:dual": "npm run build && tsx src/security/watcher-cli.ts -- --mode dual",
+    "watch:baseline": "npm run build && tsx src/security/watcher-cli.ts -- --baseline",
+    "watch:alerts": "npm run build && tsx src/security/watcher-cli.ts -- --alerts",
+    "guard:start": "npm run build && tsx src/security/llm-guard-cli.ts",
+    "guard:logs": "npm run build && tsx src/security/llm-guard-cli.ts -- --logs",
+    "guard:stats": "npm run build && tsx src/security/llm-guard-cli.ts -- --stats",
+    "watcher:start": "npm run build && tsx src/security/watcher-daemon-cli.ts start",
+    "watcher:stop": "npm run build && tsx src/security/watcher-daemon-cli.ts stop",
+    "watcher:status": "npm run build && tsx src/security/watcher-daemon-cli.ts status",
+    "watcher:restart": "npm run build && tsx src/security/watcher-daemon-cli.ts restart",
+    "security:update-baseline": "tsx scripts/update-security-baseline.ts",
+    "security:verify": "tsx -e \"import {SelfIntegrityChecker} from './src/security/self-integrity.js'; const c = new SelfIntegrityChecker(); await c.verifyAll(); console.log(c.generateReport());\"",
+    "timeline:check": "tsx scripts/timeline-merkle-check.ts",
+    "timeline:rewind-test": "tsx scripts/timeline-rewind-test.ts"
   },
   "keywords": [
     "cli",
