feat(security): implement integrity watcher system with ChatGPT fixes (7/9)
🛡️ SECURITY SYSTEM - Multi-layer file integrity monitoring for LLM CLI

COMPONENTS (7 files):
1. IntegrityWatcher - Heuristic + LLM file monitoring
2. LLMGuard - Behavioral analysis with LLM
3. WatcherDaemon - Unified daemon launcher
4. SelfIntegrity - Watchers self-protection
5. CLIs - watcher-cli, llm-guard-cli, daemon-cli
6. Scripts - update-baseline, audit-system

CHATGPT FIXES IMPLEMENTED (7/9):
✅ FIX 1: Auto-restore complete (content stored in baseline)
✅ FIX 2: SIGNATURE_FILE removed (dead code cleaned)
✅ FIX 3: ContinuousSelfIntegrityMonitor integrated in daemon
✅ FIX 4: dist/ protection (14 files: 7 src/ + 7 dist/)
✅ FIX 5: verifyBeforeExecution() regression (full paths)
✅ FIX 6: ENV support (GROK_CONTINUOUS_SELF_INTEGRITY)
✅ FIX 7: LLMGuard patterns restricted (src/, dist/, config)

REMAINING (GitHub issues to create):
⚠️  FIX 8: Active Reviewer mode (LLMGuard)
⚠️  FIX 9: Bootstrap minimal (self-integrity before imports)

FEATURES:
- Heuristic patterns (35+) for LLM sabotage detection
- File copy detection (hash mapping)
- Inode tracking (file replacement detection)
- Daemon persistence (survives CLI exit)
- Backward detection (detects pre-launch alterations)
- Self-integrity (watchers protect themselves)
- Continuous monitoring (configurable interval)
- Auto-restore from baseline
- Quarantine + forensic logging

FILES:
- src/security/integrity-watcher.ts (747 lines)
- src/security/llm-guard.ts (662 lines)
- src/security/watcher-daemon.ts (395 lines)
- src/security/self-integrity.ts (477 lines)
- src/security/watcher-cli.ts (136 lines)
- src/security/llm-guard-cli.ts (264 lines)
- src/security/watcher-daemon-cli.ts (75 lines)
- scripts/update-security-baseline.ts (206 lines)
- scripts/audit-security-system.sh (448 lines)
- .env.example (ENV variables)
- src/index.ts (auto-start integration)

TOTAL: 3440+ lines

BUILD: ✅ SUCCESS (npm run build - 0 errors)
QUALITY: 8.5/10 (ChatGPT re

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,24 @@
-# Grok API Configuration
-GROK_API_KEY=your_grok_api_key_here
+# Grok CLI Environment Variables
 
-# Optional: Custom Grok API Base URL
-# GROK_BASE_URL=https://api.x.ai/v1
+# API Configuration
+GROK_API_KEY=your-api-key-here
+
+# 🛡️ WATCHER DAEMON AUTO-START
+# Enable auto-start of watcher daemon when grokinou starts
+# CRITICAL: Détection "à rebours" - fichiers altérés AVANT lancement seront détectés
+GROK_AUTO_WATCHER=true
+
+# Watcher mode: heuristic, dual, llm
+GROK_WATCHER_MODE=dual
+
+# Enable/disable LLM Guard (default: true)
+GROK_LLM_GUARD=true
+
+# LLM Guard API Key (defaults to GROK_API_KEY if not set)
+# LLM_GUARD_API_KEY=your-llm-guard-api-key
+
+# 🔧 Continuous Self-Integrity Monitoring (default: true)
+GROK_CONTINUOUS_SELF_INTEGRITY=true
+
+# Self-integrity check interval in milliseconds (default: 10000 = 10s)
+GROK_SELF_INTEGRITY_INTERVAL=10000
